--- a/requirements.txt
+++ b/requirements.txt
@@ -139,6 +139,7 @@ pysbd==0.3.4
 python-bidi==0.6.6
 python-crfsuite==0.9.11
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
 pyttsx3==2.98
 pytz==2025.2
 pywin32==310
