--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .env
 
-venv310/
+**/venv310/
+
+**/venv/
 
 backend/__pycache__/
 
@@ -31,3 +33,11 @@ img/
 !**/preprocessed/.gitkeep
 
 data/veganlens_API_Key.json
+
+models/*.pth
+
+models/*.pt
+
+models/*.ckpt
+
+models/*.py
