--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
+addict==2.4.0
+aliyun-python-sdk-core==2.16.0
+aliyun-python-sdk-kms==2.16.5
 annotated-types==0.7.0
 anyio==4.9.0
 cachetools==5.5.2
 certifi==2025.7.14
+cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+contourpy==1.3.2
+crcmod==1.7
+cryptography==45.0.5
+cycler==0.12.1
 exceptiongroup==1.3.0
 fastapi==0.116.1
-filelock==3.13.1
-fsspec==2024.6.1
+filelock==3.14.0
+fonttools==4.59.0
+fsspec==2025.7.0
 google-api-core==2.25.1
 google-auth==2.40.3
 google-cloud-vision==3.10.2
@@ -17,28 +26,78 @@ grpcio==1.74.0
 grpcio-status==1.74.0
 h11==0.16.0
 idna==3.10
-Jinja2==3.1.4
-MarkupSafe==2.1.5
+imageio==2.37.0
+imgaug==0.4.0
+Jinja2==3.1.6
+jmespath==0.10.0
+kiwisolver==1.4.8
+lazy_loader==0.4
+lmdb==1.7.2
+Markdown==3.8.2
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+mmcv==2.0.1
+mmdet==3.1.0
+mmengine==0.10.7
+mmocr==1.0.1
+model-index==0.1.11
 mpmath==1.3.0
-networkx==3.3
-numpy==2.1.2
-pillow==11.0.0
+networkx==3.4.2
+numpy==1.26.4
+opencv-python==4.12.0.88
+opendatalab==0.0.10
+openmim==0.3.9
+openxlab==0.1.2
+ordered-set==4.1.0
+oss2==2.17.0
+packaging==24.2
+pandas==2.3.1
+pillow==11.3.0
+pillow_heif==1.0.0
+platformdirs==4.3.8
 proto-plus==1.26.1
 protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pyclipper==1.3.0.post6
+pycocotools==2.0.10
+pycparser==2.22
+pycryptodome==3.23.0
 pydantic==2.11.7
 pydantic_core==2.33.2
+Pygments==2.19.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-multipart==0.0.20
-requests==2.32.4
+pytz==2023.4
+pywin32==311
+PyYAML==6.0.2
+RapidFuzz==3.13.0
+regex==2024.11.6
+requests==2.28.2
+rich==13.4.2
 rsa==4.9.1
+scikit-image==0.25.2
+scipy==1.15.3
+shapely==2.1.1
+six==1.17.0
 sniffio==1.3.1
 starlette==0.47.2
-sympy==1.13.1
-torch==2.5.1+cu121
-torchaudio==2.5.1+cu121
-torchvision==0.20.1+cu121
+sympy==1.14.0
+tabulate==0.9.0
+termcolor==3.1.0
+terminaltables==3.1.10
+tifffile==2025.5.10
+tomli==2.2.1
+torch==2.1.2+cu121
+torchaudio==2.1.2+cu121
+torchvision==0.16.2+cu121
+tqdm==4.65.2
 typing-inspection==0.4.1
-typing_extensions==4.12.2
-urllib3==2.5.0
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==1.26.20
 uvicorn==0.35.0
+yapf==0.43.0
