--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,40 @@
+aiofiles==24.1.0
 annotated-types==0.7.0
-anyio==4.9.0
+anyio==4.10.0
 cachetools==5.5.2
-certifi==2025.7.14
-charset-normalizer==3.4.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
 exceptiongroup==1.3.0
 fastapi==0.116.1
-filelock==3.13.1
-fsspec==2024.6.1
 google-api-core==2.25.1
 google-auth==2.40.3
-google-cloud-vision==3.4.5
+google-cloud-vision==3.10.2
 googleapis-common-protos==1.70.0
 grpcio==1.74.0
-grpcio-status==1.62.3
+grpcio-status==1.74.0
 h11==0.16.0
+httptools==0.6.4
 idna==3.10
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-mpmath==1.3.0
-networkx==3.3
-numpy==2.1.2
 pillow==11.3.0
-pillow_heif==1.0.0
+pillow_heif==1.1.0
 proto-plus==1.26.1
-protobuf==4.25.8
+protobuf==6.32.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
+python-dotenv==1.1.1
 python-multipart==0.0.20
+PyYAML==6.0.2
 requests==2.32.4
 rsa==4.9.1
 sniffio==1.3.1
 starlette==0.47.2
-sympy==1.13.1
-torch==2.5.1+cu121
-torchaudio==2.5.1+cu121
-torchvision==0.20.1+cu121
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
+watchfiles==1.1.0
+websockets==15.0.1
