--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 annotated-types==0.7.0
 anyio==4.9.0
 cachetools==5.5.2
@@ -5,6 +6,7 @@ certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+distro==1.9.0
 exceptiongroup==1.3.0
 fastapi==0.116.1
 filelock==3.13.1
@@ -16,12 +18,18 @@ googleapis-common-protos==1.70.0
 grpcio==1.74.0
 grpcio-status==1.62.3
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 Jinja2==3.1.4
+jiter==0.10.0
 MarkupSafe==2.1.5
 mpmath==1.3.0
 networkx==3.3
 numpy==2.1.2
+openai==1.99.6
+packaging==25.0
+pefile==2023.2.7
 pillow==11.3.0
 pillow_heif==1.0.0
 proto-plus==1.26.1
@@ -30,15 +38,16 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
+pyinstaller==5.13.2
+pyinstaller-hooks-contrib==2025.8
 python-multipart==0.0.20
+pywin32-ctypes==0.2.3
 requests==2.32.4
 rsa==4.9.1
 sniffio==1.3.1
 starlette==0.47.2
 sympy==1.13.1
-torch==2.5.1+cu121
-torchaudio==2.5.1+cu121
-torchvision==0.20.1+cu121
+tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
